Use floating window

--- a/.luarc.json
+++ b/.luarc.json
@@ -14,5 +14,10 @@
       "${3rd}/luv/library"
     ],
     "checkThirdParty": false
+  },
+  "diagnostics": {
+    "unusedLocalExclude": [
+      "_*"
+    ]
   }
 }
